--- a/food-order-app/src/components/Meals/AvailableMeals.module.css
+++ b/food-order-app/src/components/Meals/AvailableMeals.module.css
@@ -10,6 +10,11 @@
     color: white;
 }
 
+.MealsError {
+    text-align: center;
+    color: #b40e0e;
+}
+
 .meals ul {
     list-style: none;
     margin: 0;
